[package]
name = "aprsserver"
version = "0.1.0"
edition = "2024"

[dependencies]
seahash = "4.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.37", features = ["full"] }
hyper = "1.2"
chrono = "0.4"
futures-util = "0.3"
serde_json = "1.0"
signal-hook = "0.3"
leptos = "0.6"
leptos_axum = "0.6"
leptos_meta = "0.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
